fix: JVM args